container-ephemeral-storage-limits/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-ephemeral-storage-disallowed
  labels:
    owner: me.agilebank.demo
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa:0.9.2
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
      resources:
        limits:
          ephemeral-storage: "1Gi"
